--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "json-server": "^0.17.0",
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
