--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "json-server --watch db/db.json"
+    "backend": "json-server --watch --port 3333 db/db.json"
   },
   "dependencies": {
     "json-server": "^0.17.0",
